AI acknowledgment citation

--- a/cover.tex
+++ b/cover.tex
@@ -220,6 +220,9 @@ Por fim, dedico este trabalho à minha família, a grande base da minha pessoa, 
 
 
 
+\IA{I acknowledge the use of ChatGPT-3.5 (Open AI, https://chat.openai.com) to help structuring the document and to debug certain issues during the development phase. I also acknowledge the use of Grammarly (Grammarly, https://www.grammarly.com/) premium version to help maintain a formal tone in my writing and improve my grammatical structure, punctuation and vocabulary.}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%       DEFINE THESIS COVER FIELDS
 %%                  END
