IR results missing

--- a/cover.tex
+++ b/cover.tex
@@ -181,11 +181,11 @@
 
 %%% OPTIONAL: Add an acknowledgement text
 %% Optional Acknowledgement text
-\Acknowledgements{Em primeiro lugar, expresso minha profunda gratidão aos meus orientadores, especialmente ao Professor Auxiliar João Rafael Almeida. O seu apoio foi além da orientação do projeto; ele guiou-me e desafiou-me ao longo de todo este processo, instigando-me a superar e enfrentar novos desafios. Agradeço também ao meu colaborador, Tiago Almeida, que sempre esteve disponível para me aconselhar e guiar no melhor caminho.
+\Acknowledgements{Em primeiro lugar, expresso minha profunda gratidão aos meus orientadores, especialmente ao Professor Auxiliar João Rafael Almeida. O seu apoio foi além da orientação do projeto; guiou-me e desafiou-me ao longo de todo este processo, motivando-me a superar e enfrentar novos desafios. Agradeço também ao colaborador desta dissertação, Tiago Almeida, que sempre esteve disponível para me aconselhar e guiar no melhor caminho.
 
-A todos os meus amigos, estou imensamente grato pelo constante companheirismo e pela partilha da vida académica ao longo dos últimos anos. À Inês, um agradecimento especial pela paciência e pelo suporte emocional incondicional.
+A todos os meus amigos, estou imensamente grato pelo constante companheirismo e pela partilha da vida académica ao longo dos últimos anos. À Inês, um agradecimento especial pela paciência e pelo suporte incondicional.
 
-Por fim, dedico este trabalho à minha família, a grande base da minha pessoa, que sempre me apoiou e tornou possível a minha jornada até aqui.
+Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou possível a minha jornada académica até aqui.
 }
 
 %% commented
@@ -211,12 +211,14 @@ Por fim, dedico este trabalho à minha família, a grande base da minha pessoa, 
 
 %%% Edit the Jury President information.
 %% First Member will be the President of the Jury
-\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
+
+% \JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
 
 %%% Repeat the above declaration for additional
 %%%  members of the jury as many times as necessary.
 %% Additional members of the Jury
-\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
+
+% \JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
 
 
 
