--- a/bib/references.bib
+++ b/bib/references.bib
@@ -726,3 +726,11 @@
   organization={Springer},
   doi={10.1007/978-3-030-22660-2_43}
 }
+
+
+
+@book{informatics_book_nodate,
+	title = {The {Book} of {OHDSI}},
+	url = {https://ohdsi.github.io/TheBookOfOhdsi/},
+	author = {Informatics, Observational Health Data Sciences and},
+}
