--- a/cover.tex
+++ b/cover.tex
@@ -100,7 +100,7 @@
 
 %%% Edit thesis title in Portuguese
 %% Thesis Mandatory Title in Portuguese
-\TitlePT{UM SISTEMA CONVERSACIONAL DE PESQUISA SOBRE BASE DE DADOS MÉDICAS}
+\TitlePT{UM SISTEMA CONVERSACIONAL DE PESQUISA SOBRE BASES DE DADOS MÉDICAS}
 
 %%% OPTIONAL: you can write your thesis title in
 %%%  other languages. You can repeat the following
@@ -222,7 +222,7 @@ Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou po
 
 
 
-\IA{I acknowledge the use of ChatGPT-3.5 (Open AI, https://chat.openai.com) to help structuring the document and to debug certain issues during the development phase. I also acknowledge the use of Grammarly (Grammarly, https://www.grammarly.com/) premium version to help maintain a formal tone in my writing and improve my grammatical structure, punctuation and vocabulary.}
+\IA{I acknowledge using Grammarly (Grammarly, https://www.grammarly.com/) and ChatGPT-3.5 (Open AI, https://chat.openai.com/) to improve some sentences, namely grammatical structure, punctuation, and vocabulary.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
