done - waiting for review

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -734,3 +734,19 @@
 	url = {https://ohdsi.github.io/TheBookOfOhdsi/},
 	author = {Informatics, Observational Health Data Sciences and},
 }
+
+@inproceedings{reis2024chatbotlike,
+  title="{A chatbot-like platform to enhance the discovery of OMOP CDM databases}",
+  author={Reis, Jo{~a}o Ant{'o}nio and Almeida, Jo{~a}o Rafael and Almeida, Tiago Melo and Oliveira, Jos{'e} Lu{'\i}s},
+  booktitle={Digital Personalized Health and Medicine},
+  year={2024},
+  publisher={IOS Press}
+}
+
+@inproceedings{almeida2024healthdbfinder,
+  author = {João Rafael Almeida and Jorge Miguel Silva and Luís Carlos Afonso and Tiago Melo Almeida and Rui Antunes and Richard AA Jonker and João António Reis and Dimitri Silva and Sérgio Matos and José Luís Oliveira},
+  title = "{HealthDBFinder: a question-answering task for health database discovery}",
+  booktitle={2024 IEEE 37th International Symposium on Computer-Based Medical Systems (CBMS)},
+  year={2024},
+  organization={IEEE}
+}
