--- a/cover.tex
+++ b/cover.tex
@@ -196,8 +196,8 @@ Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou po
 %%%  declaration.
 %%% Don't remove the \selectlanguage statement or you will end with incorrect hyphenation
 %% Mandatory Keywords and Abstract in Portuguese
-\Abstract{Palavras Chave}{texto livro, arquitetura, história, construção, materiais de construção, saber tradicional.}
-         {Resumo}{\selectlanguage{portuguese}Um resumo é um pequeno apanhado de um trabalho mais longo (como uma tese, dissertação ou trabalho de pesquisa). O resumo relata de forma concisa os objetivos e resultados da sua pesquisa, para que os leitores saibam exatamente o que se aborda no seu documento.\\Embora a estrutura possa variar um pouco dependendo da sua área de estudo, o seu resumo deve descrever o propósito do seu trabalho, os métodos que você usou e as conclusões a que chegou.\\Uma maneira comum de estruturar um resumo é usar a estrutura IMRaD. Isso significa: \begin{itemize} \item Introdução \item Métodos \item Resultados \item Discussão \end{itemize} Veja mais pormenores aqui:\\\texttt{https://www.scribbr.com/dissertation/abstract/}}
+\Abstract{Palavras Chave}{Portal EHDEN, Descoberta de dados biomédicos, Partilha de dados, OMOP CDM, Sistema conversacional de pesquisa, Bases de dados médicas, Recuperação de Informação, OHDSI, Definição de Coortes}
+         {Resumo}{\selectlanguage{portuguese}Na investigação médica, os estudos multicêntricos tornaram-se viáveis devido às estratégias atuais que abordam questões de interoperabilidade entre bases de dados. No entanto, à medida que essas estratégias foram amplamente adotadas, novos desafios na descoberta de dados emergiram. Inicialmente, esses desafios foram enfrentados com catálogos de bases de dados e painéis gráficos para análise e comparação de dados, mas essas soluções tornaram-se menos eficazes à medida que as comunidades de pesquisa se expandiram. Esta dissertação aborda esta questão desenvolvendo um motor de busca conversacional para ajudar os investigadores médicos a encontrar de forma eficiente as bases de dados mais adequadas para os seus estudos. Além disso, pretende melhorar este motor para auxiliar os investigadores na definição dos seus protocolos de estudo. A metodologia inclui a implementação da técnica BM25 para a recuperação ideal de bases de dados e a utilização de um grande modelo de linguagem (LLM) para tarefas de geração de texto e processamento de linguagem natural (PLN). Os resultados demonstram que o sistema conversacional de pesquisa melhora significativamente a eficiência na descoberta de bases de dados, reduzindo o tempo e o esforço necessários para os investigadores identificarem bases de dados apropriadas. Além disso, a integração da definição de coortes simplifica o processo complexo de definição de coortes, melhorando assim o fluxo geral da investigação.}
 
 %%% OPTIONAL: you can write the keywords and
 %%%  abstract in other languages. You can repeat
@@ -206,8 +206,8 @@ Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou po
 %%% Don't remove the \selectlanguage statement or you will end with incorrect hyphenation.
 %%% You can modify the language to any other supported by Latex
 %% Optional Keywords and Abstract in additional languages.
-\Abstract{Keywords}{textbook, architecture, history, construction, construction materials, traditional knowledge.}
-         {Abstract}{\selectlanguage{english}An abstract is a short summary of a longer work (such as a thesis, dissertation or research paper).\\The abstract concisely reports the aims and outcomes of your research, so that readers know exactly what your paper is about.\\Although the structure may vary slightly depending on your discipline, your abstract should describe the purpose of your work, the methods you’ve used, and the conclusions you’ve drawn.\\One common way to structure your abstract is to use the IMRaD structure. This stands for: \begin{itemize} \item Introduction \item Methods \item Results \item Discussion \end{itemize} Check for more details here:\\\texttt{https://www.scribbr.com/dissertation/abstract/}}
+\Abstract{Keywords}{EHDEN Portal, Biomedical data discovery, Data sharing, OMOP CDM, Conversational query builder, Medical databases, Information Retrieval, OHDSI, Cohort Definition}
+         {Abstract}{In medical research, multicentre studies have become feasible due to current strategies addressing interoperability issues between databases. However, as these strategies have been widely adopted, new challenges in data discovery have emerged. Initially tackled with database catalogues and graphical dashboards for data analysis and comparison, these solutions become less effective as research communities expand. This dissertation addresses this issue by developing a conversational search engine to help medical researchers efficiently find the most suitable databases for their studies. Additionally, it aims to enhance this engine to assist researchers in defining their study protocols. The methodology includes implementing the BM25 technique for optimal database retrieval and utilizing a large language model (LLM) for text generation and natural language processing (NLP) tasks. Results demonstrate that the conversational query builder significantly improves the efficiency of database discovery, reducing the time and effort required for researchers to identify appropriate databases. Furthermore, integrating cohort definition simplifies the complex process of defining cohorts, thereby enhancing the overall research workflow.}
 
 %%% Edit the Jury President information.
 %% First Member will be the President of the Jury
