--- a/cover.tex
+++ b/cover.tex
@@ -196,8 +196,8 @@ Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou po
 %%%  declaration.
 %%% Don't remove the \selectlanguage statement or you will end with incorrect hyphenation
 %% Mandatory Keywords and Abstract in Portuguese
-\Abstract{Palavras Chave}{Portal EHDEN, Descoberta de dados biomédicos, Partilha de dados, OMOP CDM, Sistema conversacional de pesquisa, Bases de dados médicas, Recuperação de Informação, OHDSI, Definição de Coortes}
-         {Resumo}{\selectlanguage{portuguese}Na investigação médica, os estudos multicêntricos tornaram-se viáveis devido às estratégias atuais que abordam questões de interoperabilidade entre bases de dados. No entanto, à medida que essas estratégias foram amplamente adotadas, novos desafios na descoberta de dados emergiram. Inicialmente, esses desafios foram enfrentados com catálogos de bases de dados e painéis gráficos para análise e comparação de dados, mas essas soluções tornaram-se menos eficazes à medida que as comunidades de pesquisa se expandiram. Esta dissertação aborda esta questão desenvolvendo um motor de busca conversacional para ajudar os investigadores médicos a encontrar de forma eficiente as bases de dados mais adequadas para os seus estudos. Além disso, pretende melhorar este motor para auxiliar os investigadores na definição dos seus protocolos de estudo. A metodologia inclui a implementação da técnica BM25 para a recuperação ideal de bases de dados e a utilização de um grande modelo de linguagem (LLM) para tarefas de geração de texto e processamento de linguagem natural (PLN). Os resultados demonstram que o sistema conversacional de pesquisa melhora significativamente a eficiência na descoberta de bases de dados, reduzindo o tempo e o esforço necessários para os investigadores identificarem bases de dados apropriadas. Além disso, a integração da definição de coortes simplifica o processo complexo de definição de coortes, melhorando assim o fluxo geral da investigação.}
+\Abstract{Palavras Chave}{Sistema conversacional de pesquisa, Descoberta de dados biomédicos, LLM, RAG, OMOP CDM, EHDEN, OHDSI.}
+         {Resumo}{\selectlanguage{portuguese}A evidência do mundo real no domínio médico refere-se a evidências clínicas derivadas da análise de dados do mundo real. Isto tornou-se possível devido às estratégias atuais para lidar com os problemas de interoperabilidade de bases de dados. À medida que essas estratégias foram amplamente adotadas, novos desafios na descoberta de dados surgiram. Um desses desafios é a descoberta de bases de dados para estudos específicos de saúde. Inicialmente, isso foi tratado usando catálogos de bases de dados e interfaces para comparar características de bases de dados. No entanto, essas soluções tornaram-se menos eficazes à medida que as redes de bases de dados se expandem. Com o objetivo de melhorar a descoberta de bases de dados e simplificar a execução de estudos multicêntricos, esta dissertação propõe um sistema conversacional de pesquisa para ajudar os investigadores médicos a encontrar de forma eficiente as bases de dados mais adequadas para os seus estudos. A solução implementa a técnica BM25 para a recuperação ideal de bases de dados e utiliza um grande modelo de linguagem (LLM) para tarefas de geração de texto e processamento de linguagem natural (NLP). Os resultados demonstram que o construtor de consultas conversacional melhora significativamente a eficiência na descoberta de bases de dados, mas, mais importante, simplifica o processo de definição de coortes em bases de dados observacionais.}
 
 %%% OPTIONAL: you can write the keywords and
 %%%  abstract in other languages. You can repeat
@@ -206,8 +206,8 @@ Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou po
 %%% Don't remove the \selectlanguage statement or you will end with incorrect hyphenation.
 %%% You can modify the language to any other supported by Latex
 %% Optional Keywords and Abstract in additional languages.
-\Abstract{Keywords}{EHDEN Portal, Biomedical data discovery, Data sharing, OMOP CDM, Conversational query builder, Medical databases, Information Retrieval, OHDSI, Cohort Definition}
-         {Abstract}{In medical research, multicentre studies have become feasible due to current strategies addressing interoperability issues between databases. However, as these strategies have been widely adopted, new challenges in data discovery have emerged. Initially tackled with database catalogues and graphical dashboards for data analysis and comparison, these solutions become less effective as research communities expand. This dissertation addresses this issue by developing a conversational search engine to help medical researchers efficiently find the most suitable databases for their studies. Additionally, it aims to enhance this engine to assist researchers in defining their study protocols. The methodology includes implementing the BM25 technique for optimal database retrieval and utilizing a large language model (LLM) for text generation and natural language processing (NLP) tasks. Results demonstrate that the conversational query builder significantly improves the efficiency of database discovery, reducing the time and effort required for researchers to identify appropriate databases. Furthermore, integrating cohort definition simplifies the complex process of defining cohorts, thereby enhancing the overall research workflow.}
+\Abstract{Keywords}{Conversational query builder, Biomedical data discovery, LLM, RAG, OMOP CDM, EHDEN, OHDSI.}
+         {Abstract}{Real-world evidence in the medical domain refers to clinical evidence derived from real-world data analysis. This become possible due to current strategies to handle the database interoperability issues. As these strategies have been widely adopted, new challenges in data discovery have appeared. One of these challenges is the discovery of databases for specific health studies. Initially, this was handled using database catalogs and interfaces to compare database characteristics. However, these solutions become less effective as database networks expand. Aiming to improve the discovery of databases and simplify the execution of multicenter studies, this dissertation proposes a conversational query builder to assist medical researchers in efficiently finding the most suitable databases for their studies. The solution implements the BM25 technique for optimal database retrieval and uses a large language model (LLM) for text generation and natural language processing (NLP) tasks. The results demonstrate that the conversational query builder significantly improves the efficiency of database discovery, but more importantly, it simplifies the process of defining cohorts over observational databases.}
 
 %%% Edit the Jury President information.
 %% First Member will be the President of the Jury
