--- a/cover.tex
+++ b/cover.tex
@@ -9,7 +9,7 @@
 
 % Remove 'coverdepname' parameter to remove department name from cover pages
 % Add 'final' parameter to remove "DOCUMENTO PROVISÓRIO" from cover page
-\documentclass[11pt,twoside,a4paper]{report}
+\documentclass[11pt,twoside,a4paper, final]{report}
 
 %%% This file is a template for the cover of your
 %%%  thesis.
@@ -197,7 +197,7 @@ Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou po
 %%% Don't remove the \selectlanguage statement or you will end with incorrect hyphenation
 %% Mandatory Keywords and Abstract in Portuguese
 \Abstract{Palavras Chave}{Sistema conversacional de pesquisa, Descoberta de dados biomédicos, LLM, RAG, OMOP CDM, EHDEN, OHDSI.}
-         {Resumo}{\selectlanguage{portuguese}A evidência do mundo real no domínio médico refere-se a evidências clínicas derivadas da análise de dados do mundo real. Isto tornou-se possível devido às estratégias atuais para lidar com os problemas de interoperabilidade de bases de dados. À medida que essas estratégias foram amplamente adotadas, novos desafios na descoberta de dados surgiram. Um desses desafios é a descoberta de bases de dados para estudos específicos de saúde. Inicialmente, isso foi tratado usando catálogos de bases de dados e interfaces para comparar características de bases de dados. No entanto, essas soluções tornaram-se menos eficazes à medida que as redes de bases de dados se expandem. Com o objetivo de melhorar a descoberta de bases de dados e simplificar a execução de estudos multicêntricos, esta dissertação propõe um sistema conversacional de pesquisa para ajudar os investigadores médicos a encontrar de forma eficiente as bases de dados mais adequadas para os seus estudos. A solução implementa a técnica BM25 para a recuperação ideal de bases de dados e utiliza um grande modelo de linguagem (LLM) para tarefas de geração de texto e processamento de linguagem natural (NLP). Os resultados demonstram que o construtor de consultas conversacional melhora significativamente a eficiência na descoberta de bases de dados, mas, mais importante, simplifica o processo de definição de coortes em bases de dados observacionais.}
+         {Resumo}{\selectlanguage{portuguese}A evidência do mundo real no domínio médico refere-se a evidências clínicas derivadas da análise de dados do mundo real. Isto tornou-se possível devido às estratégias atuais para lidar com os problemas de interoperabilidade de bases de dados. À medida que essas estratégias foram amplamente adotadas, novos desafios na descoberta de dados surgiram. Um desses desafios é a descoberta de bases de dados para estudos específicos de saúde. Inicialmente, isso foi tratado usando catálogos de bases de dados e interfaces para comparar características de bases de dados. No entanto, essas soluções tornaram-se menos eficazes à medida que as redes de bases de dados se expandem. Com o objetivo de melhorar a descoberta de bases de dados e simplificar a execução de estudos multicêntricos, esta dissertação propõe um sistema conversacional de pesquisa para ajudar os investigadores médicos a encontrar de forma eficiente as bases de dados mais adequadas para os seus estudos. A solução implementa a técnica BM25 para a recuperação ideal de bases de dados e utiliza um grande modelo de linguagem (LLM) para tarefas de geração de texto e processamento de linguagem natural (NLP). Os resultados demonstram que o sistema conversacional de pesquisa melhora significativamente a eficiência na descoberta de bases de dados, mas, mais importante, simplifica o processo de definição de coortes em bases de dados observacionais.}
 
 %%% OPTIONAL: you can write the keywords and
 %%%  abstract in other languages. You can repeat
